--- a/app/src/main/res/drawable-v24/background.xml
+++ b/app/src/main/res/drawable-v24/background.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#fafafa"/>
+    <solid android:color="#00FAFAFA"/>
     <stroke android:color="#e7e7e7"
         android:width="1dp"/>
     <corners android:radius="4dp"/>
