--- a/app/src/main/res/layout/activity_user_notes.xml
+++ b/app/src/main/res/layout/activity_user_notes.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,85 +10,106 @@
 
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tv_totalExpence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="74dp"
-        android:drawableEnd="@drawable/ic_rupee"
-        android:drawablePadding="20dp"
-        android:hint="0.00"
+        android:text="0"
+        android:drawableStart="@drawable/ic_rupee"
         android:textSize="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@drawable/background"
+        android:padding="5dp"
+        android:layout_margin="10dp"
+        android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/ic_rupee"
-        android:drawablePadding="20dp"
-        android:hint="+999"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <TextView
-        android:id="@+id/tv_curmonth"
-        style="@style/TextAppearance.AppCompat.Headline"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_below="@+id/tv_totalExpence"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="44dp"
-        android:text="July"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/Budget"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:layout_margin="5dp"
+        android:padding="2dp"
+        android:background="@drawable/background"
+        android:id="@+id/ll"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/Budget"
-        style="@style/TextAppearance.AppCompat.Headline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/ic_rupee"
-        android:drawablePadding="20dp"
-        android:text="15000"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_curmonth"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/tv_curmonth" />
+
+
+
+        <TextView
+            android:id="@+id/tv_curmonth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CurrentMonth"
+            android:singleLine="true"
+            android:textSize="16dp"
+            android:layout_weight="1"
+            android:textAllCaps="true"
+            android:textAlignment="center"
+            android:layout_margin="10dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/txt_budget"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Budget"
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:textSize="16dp"
+            android:layout_margin="10dp"
+            android:textStyle="bold"/>
+
+
+
+        <TextView
+            android:id="@+id/tv_Leftcash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Amount"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:drawableEnd="@drawable/ic_rupee"
+            android:textSize="16dp"
+            android:layout_margin="10dp"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec_savednotes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/Budget"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btn_addnotes"
-        style="@style/Widget.Material3.FloatingActionButton.Large.Tertiary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/ll"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="#1E88E5"
-        android:text="Add Notes"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:icon="@drawable/ic_add"
-        app:iconTint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.895" />
+       />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/btn_addnotes"
+            style="@style/Widget.Material3.FloatingActionButton.Large.Tertiary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="#1E88E5"
+            android:text="Add Notes"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:icon="@drawable/ic_add"
+            app:iconTint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.895" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
