--- a/app/src/main/res/layout/layout_notes.xml
+++ b/app/src/main/res/layout/layout_notes.xml
@@ -9,6 +9,8 @@
     android:orientation="vertical">
 
 
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -84,5 +86,16 @@
 
 
         </GridLayout>
+
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/iv_btndelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_delete"
+        android:layout_gravity="right"
+        android:layout_marginTop="-25dp"
+        android:padding="2dp"
+        android:background="@drawable/background"/>
 </LinearLayout>
