--- a/app/src/main/res/layout/activity_user_notes.xml
+++ b/app/src/main/res/layout/activity_user_notes.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tv_totalExpence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="1000"
         android:drawableStart="@drawable/ic_rupee"
         android:textSize="50dp"
         android:background="@drawable/background"
@@ -68,7 +68,7 @@
             android:text="Amount"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:drawableEnd="@drawable/ic_rupee"
+            android:drawableStart="@drawable/ic_rupee"
             android:textSize="16dp"
             android:layout_margin="10dp"
             android:textStyle="bold"/>
