--- a/app/src/main/res/layout/activity_monthly_history.xml
+++ b/app/src/main/res/layout/activity_monthly_history.xml
@@ -19,29 +19,15 @@
 
 
 
-        <TextView
-            android:id="@+id/tv_month"
+        <Spinner
+            android:id="@+id/sp_history"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sep"
-            android:singleLine="true"
-            android:textSize="16dp"
-            android:layout_weight="1"
-            android:textAllCaps="true"
-            android:textAlignment="center"
             android:layout_margin="10dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_monthlybudget"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="10,000"
-            android:textAlignment="center"
             android:layout_weight="1"
-            android:textSize="16dp"
-            android:layout_margin="10dp"
-            android:textStyle="bold"/>
+            android:entries="@array/spinner_history"
+            android:padding="10dp"
+            />
 
 
 
@@ -59,9 +45,10 @@
 
         <ImageView
             android:id="@+id/iv_arrow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:layout_gravity="center"
             android:src="@drawable/ic_arrow_down"
             />
 
