--- a/app/src/main/res/layout/layout_category.xml
+++ b/app/src/main/res/layout/layout_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="120dp"
     android:layout_height="100dp"
-    android:layout_margin="9dp"
+    android:layout_margin="3dp"
     android:id="@+id/categorylayout"
     android:background="@color/grey"
     android:orientation="vertical">
@@ -29,6 +29,7 @@
         android:layout_width="40dp"
         android:layout_height="70dp"
         android:layout_gravity="center"
+        android:backgroundTint="@color/red"
         android:layout_marginTop="-20dp"
         android:src="@drawable/ic_shopping" />
 
