--- a/app/src/main/res/layout/layout_notes.xml
+++ b/app/src/main/res/layout/layout_notes.xml
@@ -2,33 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="10dp"
-    android:background="@drawable/background"
     android:orientation="vertical">
-
-
-
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
 
-        <ImageView
-            android:id="@+id/imageview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/background"
-            android:padding="10dp"
-            android:src="@drawable/ic_shopping" />
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview"
+            app:cardCornerRadius="20dp"
+            android:elevation="20dp"
+            android:clipToOutline="true"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imageview"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+
+                android:clipToOutline="true"
+                android:padding="10dp"
+
+                android:src="@drawable/ic_shopping" />
+        </androidx.cardview.widget.CardView>
         <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/imageview"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/cardview"
             android:columnCount="2">
 
             <TextView
@@ -40,7 +48,7 @@
                 android:hint="amount"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:text="category"
-                android:textSize="18dp"
+                android:textSize="14dp"
                 android:textStyle="bold" />
 
 
@@ -53,7 +61,7 @@
                 android:hint="amount"
                 android:text="Amount"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18dp"
+                android:textSize="14dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -66,7 +74,7 @@
                 android:hint="amount"
                 android:text="note"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="16dp"
+                android:textSize="14dp"
                 android:textStyle="bold" />
 
 
@@ -81,7 +89,7 @@
                 android:text="date"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textAlignment="center"
-                android:textSize="16dp"
+                android:textSize="14dp"
                 android:textStyle="bold" />
 
 
@@ -96,6 +104,6 @@
         android:src="@drawable/ic_delete"
         android:layout_gravity="right"
         android:layout_marginTop="-25dp"
-        android:padding="2dp"
+        android:padding="5dp"
         android:background="@drawable/background"/>
 </LinearLayout>
