--- a/app/src/main/res/layout/activity_monthly_history.xml
+++ b/app/src/main/res/layout/activity_monthly_history.xml
@@ -5,14 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
-    android:background="@drawable/background"
+    android:background="@drawable/background_layout"
     tools:context=".View.Monthly_History">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:padding="2dp"
-
         android:id="@+id/ll"
         android:orientation="horizontal">
 
@@ -40,6 +38,26 @@
             android:textAlignment="center"
             android:textSize="16dp"
             android:layout_margin="10dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/tv_HistoryExpence"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="000"
+            android:layout_margin="10dp"
+            android:textSize="16dp"
+            android:layout_weight="1"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/tv_historyLeftcash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Amount"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:textSize="16dp"
             android:textStyle="bold"/>
 
 
