--- a/app/src/main/res/layout/layout_notes.xml
+++ b/app/src/main/res/layout/layout_notes.xml
@@ -105,5 +105,5 @@
         android:layout_gravity="right"
         android:layout_marginTop="-25dp"
         android:padding="5dp"
-        android:background="@drawable/background"/>
+        android:background="@drawable/background_layout"/>
 </LinearLayout>
