--- a/app/src/main/res/layout/layout_notes.xml
+++ b/app/src/main/res/layout/layout_notes.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="10dp"
+    android:layout_marginRight="10dp"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -16,11 +16,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview"
-            app:cardCornerRadius="20dp"
-            android:elevation="20dp"
-            android:clipToOutline="true"
             android:layout_width="50dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:clipToOutline="true"
+            android:elevation="20dp"
+            app:cardCornerRadius="20dp">
 
             <ImageView
                 android:id="@+id/imageview"
@@ -32,7 +32,9 @@
 
                 android:src="@drawable/ic_shopping" />
         </androidx.cardview.widget.CardView>
+
         <GridLayout
+            android:id="@+id/gridview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -41,13 +43,13 @@
 
             <TextView
                 android:id="@+id/tv_cat"
-                android:layout_width="190dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="9dp"
                 android:layout_toRightOf="@+id/imageview"
                 android:hint="amount"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:text="category"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="14dp"
                 android:textStyle="bold" />
 
@@ -87,8 +89,8 @@
                 android:layout_weight="1"
                 android:hint="amount"
                 android:text="date"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="14dp"
                 android:textStyle="bold" />
 
@@ -97,13 +99,29 @@
 
     </RelativeLayout>
 
+    <ProgressBar
+        android:id="@+id/progress_horizontal"
+        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/gridview"
+        android:background="@drawable/start_background"
+        android:layout_marginLeft="69dp"
+        android:layout_marginTop="-10dp"
+        android:layout_marginRight="55dp"
+        android:progressBackgroundTint="@color/purple_200"
+        android:max="100"
+        android:progressTint="#E0F3FF"
+
+        />
+
     <ImageView
         android:id="@+id/iv_btndelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_delete"
         android:layout_gravity="right"
         android:layout_marginTop="-25dp"
+        android:background="@drawable/background_layout"
         android:padding="5dp"
-        android:background="@drawable/background_layout"/>
+        android:src="@drawable/ic_delete" />
 </LinearLayout>
