--- a/app/src/main/res/layout/mydialog.xml
+++ b/app/src/main/res/layout/mydialog.xml
@@ -1,72 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    android:elevation="20dp"
+    android:padding="10dp"
     android:layout_margin="10dp"
-   >
+    android:clipToOutline="true"
+    app:cardCornerRadius="20dp">
 
 
-    <EditText
-        android:id="@+id/ed_categoryName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Category name"/>
 
-    <RelativeLayout
-        android:background="@color/white"
-        android:backgroundTint="#3CDCDADA"
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <ImageView
-            android:id="@+id/iv_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_shopping"
-            android:padding="8dp"/>
-
-        <EditText
-
-            android:id="@+id/tv_emoji"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/iv_btn"
-            android:padding="15dp"
-            android:hint=" Select Category Icon"
-            android:textSize="16dp"
-            android:textStyle="bold" />
+            android:layout_height="250dp"
+            android:orientation="vertical">
 
 
-    </RelativeLayout>
+            <EditText
+                android:id="@+id/ed_categoryName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="20dp"
+                android:textStyle="bold"
+                android:background="@drawable/background_layout"
+                android:hint="Category name" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@color/white"
+                android:backgroundTint="#3CDCDADA">
 
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/btn_Add"
-            style="@style/Widget.Material3.FloatingActionButton.Large.Tertiary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="#43A047"
-            android:text="ADD"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:icon="@drawable/ic_add"
-            app:iconTint="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+                <ImageView
+                    android:id="@+id/iv_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_shopping" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/tv_emoji"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/iv_btn"
+                    android:hint=" Select Category Icon"
+                    android:padding="15dp"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
 
-</LinearLayout>
+
+            </RelativeLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                    android:id="@+id/btn_Add"
+                    style="@style/Widget.Material3.FloatingActionButton.Large.Tertiary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="#43A047"
+                    android:text="ADD"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    app:icon="@drawable/ic_add"
+                    app:iconTint="@color/white"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
