--- a/app/src/main/res/drawable-v24/background_layout.xml
+++ b/app/src/main/res/drawable-v24/background_layout.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
     <solid android:color="#00FAFAFA"/>
-    <stroke android:color="#e7e7e7"
+    <stroke android:color="#0AE7E7E7"
         android:width="1dp"/>
     <corners android:radius="4dp"/>
 
