--- a/app/src/main/res/layout/activity_monthly_history.xml
+++ b/app/src/main/res/layout/activity_monthly_history.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="3dp"
-    android:background="@drawable/background_layout"
+    android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/background_mainlayout"
     tools:context=".View.Monthly_History">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp"
         android:id="@+id/ll"
+        android:layout_margin="4dp"
         android:orientation="horizontal">
 
 
