--- a/app/src/main/res/layout/fragment_loadcategorydata.xml
+++ b/app/src/main/res/layout/fragment_loadcategorydata.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,9 +7,43 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        >
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipCpp"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vacation" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipJava"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hotel" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipPython"
+            style="@style/Widget.MaterialComponents.Chip.Filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gym" />
+
+    </com.google.android.material.chip.ChipGroup>
+
+
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_margin="2dp"
         android:id="@+id/frag_rec_cat"
+        android:layout_below="@+id/chip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</FrameLayout>
+</RelativeLayout>
