--- a/app/src/main/res/layout/mydialog.xml
+++ b/app/src/main/res/layout/mydialog.xml
@@ -7,6 +7,7 @@
     android:elevation="20dp"
     android:padding="10dp"
     android:layout_margin="10dp"
+    android:background="@drawable/background_mainlayout"
     android:clipToOutline="true"
     app:cardCornerRadius="20dp">
 
@@ -15,28 +16,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="250dp"
+
+            android:background="@drawable/background_mainlayout"
             android:orientation="vertical">
 
 
             <EditText
+
                 android:id="@+id/ed_categoryName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:padding="20dp"
                 android:textStyle="bold"
-                android:background="@drawable/background_layout"
                 android:hint="Category name" />
 
             <RelativeLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="@color/white"
-                android:backgroundTint="#3CDCDADA">
+                android:layout_margin="10dp">
 
 
                 <ImageView
+
                     android:id="@+id/iv_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
