category fragment add TODO pass data between Adapter and fragment , frg is bad idea for this type of use might change

--- a/app/src/main/res/layout/activity_user_notes.xml
+++ b/app/src/main/res/layout/activity_user_notes.xml
@@ -4,9 +4,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/Home_layout"
+    android:visibility="visible"
     android:background="@drawable/background_mainlayout"
     tools:context=".View.User_Notes">
 
@@ -87,6 +88,14 @@
                 app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <FrameLayout
+        android:id="@+id/container_main"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
 
 </RelativeLayout>
