--- a/app/src/main/res/layout/layout_notes.xml
+++ b/app/src/main/res/layout/layout_notes.xml
@@ -33,32 +33,37 @@
                 android:src="@drawable/ic_shopping" />
         </androidx.cardview.widget.CardView>
 
-        <GridLayout
+        <LinearLayout
             android:id="@+id/gridview"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:orientation="horizontal"
             android:layout_toRightOf="@+id/cardview"
-            android:columnCount="2">
+            >
 
             <TextView
                 android:id="@+id/tv_cat"
+                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="9dp"
+                android:layout_gravity="left"
                 android:layout_toRightOf="@+id/imageview"
-                android:hint="amount"
-                android:text="category"
+                android:hint="category"
+                android:text="Category"
+                android:gravity="start"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="13dp"
                 android:textStyle="bold" />
 
 
             <TextView
+                android:layout_weight="1"
                 android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/tv_cat"
+                android:layout_gravity="center"
+                android:gravity="start"
                 android:drawableStart="@drawable/ic_rupee_small"
                 android:hint="amount"
                 android:text="Amount"
@@ -66,62 +71,68 @@
                 android:textSize="13dp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tv_note"
-                android:layout_width="190dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/pbar"
-                android:layout_toRightOf="@+id/tv_date"
-                android:layout_weight="1"
-                android:hint="amount"
-                android:text="note"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="13dp"
-                android:textStyle="bold" />
+
 
 
             <TextView
+
+                android:gravity="center"
                 android:id="@+id/tv_date"
-                android:layout_width="wrap_content"
+                android:layout_width="99dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/pbar"
+                android:layout_gravity="right"
+                android:layout_marginRight="29dp"
                 android:layout_toRightOf="@+id/imageview"
-                android:layout_weight="1"
-                android:hint="amount"
-                android:text="date"
-                android:textAlignment="center"
+                android:layout_weight="3"
+                android:hint="Date"
+                android:text="Date"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="13dp"
                 android:textStyle="bold" />
 
 
-        </GridLayout>
+        </LinearLayout>
 
     </RelativeLayout>
 
     <ProgressBar
+
         android:id="@+id/progress_horizontal"
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="6dp"
         android:layout_below="@+id/gridview"
-        android:background="@drawable/background_progressbar"
         android:layout_marginLeft="69dp"
-        android:layout_marginTop="-16dp"
+        android:layout_marginTop="-26dp"
         android:layout_marginRight="35dp"
+        android:background="@drawable/background_progressbar"
+        android:max="100"
         android:progress="70"
         android:progressBackgroundTint="#07BB86FC"
-        android:max="100"
         android:progressTint="#E0F3FF"
 
         />
 
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/tv_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pbar"
+        android:layout_marginRight="19dp"
+        android:layout_toRightOf="@+id/tv_date"
+        android:layout_weight="1"
+        android:hint="Note"
+        android:text="note"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="13dp"
+        android:textStyle="bold" />
     <ImageView
         android:id="@+id/iv_btndelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginTop="-25dp"
+        android:layout_marginTop="-45dp"
         android:background="@drawable/background_layout"
         android:padding="5dp"
         android:src="@drawable/ic_delete" />
